--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,10 @@ border-top: 1px solid #F0EEEE;
 
  
  /*HEADER - section with my name and position*/
- #home {
-	 background: url(../images/banner.jpg) no-repeat center top;
+
+ header {
+	background: url(../images/banner.jpg) no-repeat center top;
     background-size: cover;
-	min-height: 150px;
  }
 
  .banner {
@@ -74,17 +74,22 @@ border-top: 1px solid #F0EEEE;
     font-size: 1.3em;
     letter-spacing: 4px;  
 
+     animation-delay: 1s;
+
 }
 
 .banner span {
 	color: #CCCCCC;
 	font-size: .85em;
+    animation-delay: 1.5s;
+    box-shadow: 0 2px 3px rgba(0,0,0,.4);
 }
 /*END HEADER*/
 
 /*NAVIGATION SEC*/
+
 .navbar {
-   margin: 0;
+   margin: 0;   
 }
 
 /*ABOUT*/
@@ -124,13 +129,15 @@ border-top: 1px solid #F0EEEE;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     padding: 10px;
-	font-size: 12px;
 	color: #fff;
     /*background: #45CBE8;*/
 	text-align: center;
 	max-width: 300px;
 	margin: 0 auto;
+}
 
+#about .card_email p {
+    font-size: 16px;
 }
 
 #about .my_image {
