change image to plain square

--- a/printable_cv/css/style.css
+++ b/printable_cv/css/style.css
@@ -212,7 +212,7 @@ h3.section_title {
 /*    margin-top: 50px;*/
     width: 200px;
     height: 200px;
-    border-radius: 50%;
+/*    border-radius: 50%;*/
     border: 3px solid white;    
 }
 
