--- a/printable_cv/css/style.css
+++ b/printable_cv/css/style.css
@@ -313,6 +313,19 @@ ul, ol { padding-left: 20px; }
     border: 1px solid rgba(192,192,192,0.5);
 }
 
+#endnote a, #endnote a:visited {
+    border-radius: 6px;
+    display: inline-block;
+    font-size: 16px;
+    text-decoration: none;
+    background: #25AAE2;
+    color: #fff;
+    padding: 5px 10px;
+    margin: 0 auto 10px;;
+       
+}
+}
+
 
 
 
