--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,6 @@
-/*MAIN COLORS
-
-YELLOW: #F1CC15
-DARK BG: #212121
-LIGHT BG: #F0F0F0
-GREY ON LIGHT: #616362
-*/
-
-
 * {
 	box-sizing: border-box;
 }
-
-.red_border {border: red 1px solid;     }
 
 html, body{
     font-size: 100%;
@@ -69,13 +58,10 @@ border-top: 1px solid #F0EEEE;
 	border: #fff 3px solid;
 	margin: 0 auto 5px;
 	padding: 10px;
-
 	width: 60%;
     font-size: 1.3em;
     letter-spacing: 4px;  
-
-     animation-delay: 1s;
-
+    animation-delay: 1s;
 }
 
 .banner span {
@@ -97,6 +83,12 @@ border-top: 1px solid #F0EEEE;
     border-bottom: orange 3px solid;
 }
 
+.navbar-nav li:not(:first-child) {
+    border-right: .5px solid rgba(192, 192, 192, .5);
+    border-left: .5px solid rgba(192, 192, 192, .5);            
+}
+
+
 /*ABOUT*/
 #about , #exp, #portfolio{
 	padding: 35px 20px 48px;
@@ -111,15 +103,12 @@ border-top: 1px solid #F0EEEE;
 	text-align: center;
 	margin: 0;
     padding-bottom: 11px;
-    /*color: #fff;*/
     font: normal normal 2.125em/1.33em 'Lato';  
-	/*max-width: 296px;*/
 }
 #about .about_me_text h1 { color: #000}
 
 #about .about_me_text p {
     margin: 15px auto 0;
-    /*margin-bottom: 0;*/
 	text-align: center;
 	max-width: 550px;
 }
@@ -135,7 +124,6 @@ border-top: 1px solid #F0EEEE;
     -webkit-border-radius: 5px;
     padding: 10px;
 	color: #fff;
-    /*background: #45CBE8;*/
 	text-align: center;
 	max-width: 300px;
 	margin: 0 auto;
@@ -146,37 +134,23 @@ border-top: 1px solid #F0EEEE;
 }
 
 #about .my_image {
-	/*margin-top: 50px;*/
     width: 200px;
     height: 200px;
     border-radius: 50%;
     border: 3px solid #fff;
-    /*transition: all .5s;*/
 }
 
-/*#SKILLS SECTION
-    .skills-grp left
-        text
-    .skills-grp right
-        .pie-charts (top sec)
-        #dev_icons (bttom  sec)
-        
-*/
-#skills {
-   
+
+#skills {   
      background: #212121;
 }
     
 
 
 #skills .skills-grp {
-	/*background: url(../images/serve.jpg) no-repeat center top;*/
-	/*padding: 35px 30px;*/
 	background-color: #F5F7F9;
     color: #3d4351;
-    /*background-image: url(../icons_bck.png);*/
     background-attachment: fixed;
-    /*color: #fff;*/
 }
 
 .pie_charts {
@@ -186,10 +160,6 @@ border-top: 1px solid #F0EEEE;
    
     color: #F7F4F7;
     letter-spacing: 1px;
-    /*font-family: Arial, Helvetica, sans-serif !important;*/
-    
-   
-    
 }
 
 .pie_charts .item {
@@ -209,11 +179,6 @@ border-top: 1px solid #F0EEEE;
     color: #eb5424;
 }
 
-#skills h3 {
-	/*padding-bottom: 25px;*/
-
-}
-
 #skills ul li {
 	list-style-type: none;
     /*line-height: 16px;*/
@@ -225,14 +190,11 @@ border-top: 1px solid #F0EEEE;
 #dev_icons { display: none;}
 
 .dev_icon {
-/*	position: relative; display: inline-block;*/
     float: left;
     width: 33.33%;    
     padding: 20px 0;
     vertical-align: middle;
-/*    border: #fff 1px solid;*/
-    max-height: 98px;
-    
+    max-height: 98px;    
 }
 
 .dev_icon svg { width: 70%; position: relative; } /*for positioning check inline styles*/
@@ -240,7 +202,7 @@ border-top: 1px solid #F0EEEE;
 
 
 svg:not(:last-child) {
-	/*border: red 1px solid;*/
+	border: red 100px solid;
 	margin-right: 35px;
 } 
 
@@ -271,8 +233,7 @@ svg:not(:last-child) {
     border-right: none;
     border-top: none; ;
     padding: 1em 10px;
-/*    box-shadow: 0 0 5px rgba(6,8,8,0.25);*/
-     box-shadow: 1px 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 1px 4px 8px 0 rgba(0,0,0,0.2);
     -webkit-transition: 0.3s;
     transition: 0.3s;
     background: #fff; 
@@ -286,21 +247,15 @@ svg:not(:last-child) {
 .exp_job_year_info {
       float: left;
     width: 100%;
-/*    width: 30%;*/
-/*    border-left: 5px solid #eb5424;*/
-/*    padding-left: 14px;*/
 }
 
 .exp_job_year_info h4 {
     letter-spacing: 2px;
-/*    border: red 2px solid*/
-  font-weight: 700;
-        font-size: 16px !important;   
+    font-weight: 700;
+    font-size: 16px !important;   
     color: #333;
-     text-transform: uppercase;
+    text-transform: uppercase;
     text-align: center;
-/*    border: blue 1px solid;*/
-   /*font: normal normal 2.125em/1.33em 'Lato';*/
     margin-bottom: 10px;
     
 }
@@ -528,10 +483,4 @@ footer li, footer li a { color: #fff; }
 }
 
 
-
-@media (min-width: 1200px) {
-	.skills-grp {
-/*		min-height: 400px;*/
-	}
-}
 
