--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,15 @@
 html, body{
     font-size: 100%;
 	font-family: 'Lato', sans-serif;
-	background:#ffffff;
 	margin: 0;
     color: #333;
 }
 
-body { max-width: 1400px; margin: 0 auto;}
+body {
+    max-width: 1400px; 
+    margin: 0 auto;   
+    background: #000;
+}
 p,ul li,ol li{
 	margin:0;
 	font-size:14px;
