--- a/printable_cv/css/style.css
+++ b/printable_cv/css/style.css
@@ -18,8 +18,9 @@
 html, body {
     font-size: 14px;
 	font-family: 'Lato', sans-serif;
-	 background: #222222;
-	margin: 0;    
+    background: #222222;
+	margin: 0;  
+    max-height: calc(100vh - 20px);
 }
 
 p,ul li,ol li{
@@ -28,6 +29,8 @@ p,ul li,ol li{
 	letter-spacing: .5px;
 }
 
+ul li { list-style-type: none; }
+
 h1,h2,h3,h4,h5,h6{
 	font: normal normal 2.125em/1.33em 'Lato';
 	text-transform:uppercase;
@@ -35,51 +38,18 @@ h1,h2,h3,h4,h5,h6{
     color: #343434;
 }
 
-ul li { list-style-type: none; }
 .thesis ol span { margin-left: 2px; }
-
-
- 
- /*HEADER - section with my name and position*/
-
- 
-
-
-/*END HEADER*/
-
-/*
-TO UPDATE
-        #profile_header
-            #profile_user
-                #profile_photo
-                #profile_name_area
-                    #profile_name
-                        h1
-                        h4
-            #profile_data
-                .profile_row name
-                .profile_row birth
-                .profile_row address
-                .profile_row phone
-                .profile_row email
-                .profile_row website
-*/
          
 #wrapper {
-    
-/*    min-width:*/
+    background: #fff;
     min-width: 950px;
     max-width: 1050px;
-    background: #fff;
-    
-    margin: 0 auto;
-/*    background: url('../images/Capture.PNG');background-size: cover;*/
+    margin: 0 auto;   
 }
 
 #profile_header {
     min-height: 155px;
-    padding: 30px 30px 0;
-    border-bottom: 1px solid ;
+    padding: 30px 30px 0;    
     clear: both;
 }
 
@@ -123,10 +93,6 @@ header {
     padding: 24px 30px 56px;
 }
 
-
-
-
-
 #profile_body .left {
     float: left;
     width: 70%;
@@ -146,10 +112,10 @@ header {
 
 
 h3.section_title {
-    color: #ECAC18;
+    color: #0D9F4A;
     padding-bottom: 12px;
     margin-bottom: 28px;
-    border-bottom: 1px #ECAC18 solid;
+    border-bottom: 1px #0D9F4A solid;
     font-size: 20px;
     font-weight: 500;
 }
@@ -169,7 +135,7 @@ h3.section_title {
 
 .exp_item_header .position {
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .exp_item_header .position,
@@ -208,7 +174,7 @@ h3.section_title {
 
 .sec.right h4 {
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 
@@ -218,7 +184,7 @@ h3.section_title {
 }
 
 #profile_data .th {
-    font-weight: 700;
+    font-weight: 600;
     width: 90px;
     margin-right: 10px;
     text-align: right;
@@ -238,13 +204,13 @@ ul.skills{padding:0;text-align:center;}
 .skills li{ 
     border-radius:6px;
     display:inline-block;
-    background:#25AAE2;
-    color:#fff;
+    background: #0D9F4A;
+    color: #fff;
     padding:5px 10px;
     margin:2px 2px 10px;
 }
 /*other colors: black-alternative: #6A6565, yellow-alt: #F3CF8B*/
-.skills li:nth-child(odd){background:#0D9F4A;}
+.skills li:nth-child(odd){background:#25AAE2;}
 
 /*border + tail effect*/
 .icon_list li {
@@ -269,8 +235,7 @@ ul.skills{padding:0;text-align:center;}
     height: 0;
     border-top: solid 12px rgba(192,192,192,.7);
     border-left: solid 12px transparent;
-    border-right: solid 12px transparent;
-   
+    border-right: solid 12px transparent;   
 }
 
  ol.icon_list{
@@ -298,35 +263,75 @@ ul, ol { padding-left: 20px; }
 }
 
 .exp_item_header {
-    border: 1px solid rgba(192,192,192,0.5);
+    border: 1px solid rgba(192,192,192,0.8);
 }
 
+p#endnote { text-align: center; }
 #endnote a, #endnote a:visited {
     border-radius: 6px;
-    display: inline-block;
     font-size: 16px;
     text-decoration: none;
     background: #25AAE2;
     color: #fff;
-    padding: 5px 10px;
-    margin: 0 auto 10px;;
-       
+    padding: 0 10px;
+    margin: 0 auto 10px;       
 }
 
 #download_cv {
-    position: fixed;
-    top: 10px;
+    position: fixed;  
+    bottom: 0;
     right: 5px;
-    border: 1px solid #ff6666;
+    border: 1px solid #E2E1E6;
+    width: 100%;
+    text-align: center;
+    background: #343434;
+    
+    max-width: 1050px;
+    left: 50%;
+    transform: translateX(-50%);
+
 }
 
 #download_cv a {
-    color: #ff6666 !important;
+    color: #25AAE2;
     text-decoration: none;
-
-
+    padding: 0 5%;
+    line-height: 2;
+    letter-spacing: 1px;
 }
 
+/*for print*/
+
+@media print {
+     #download_cv {
+         display: none;
+     }
+    
+     h3.section_title {        
+         border-bottom: 1px #000 solid;
+     }
+    
+    .banner h2 {
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+    
+     h3.section_title,
+    .skills li,
+    .banner span,
+    .banner h2,
+    .icon_list a,
+    .icon_list a:visited {
+         color: #000;        
+    }
+
+    .page-break {
+        page-break-before: always;
+        margin-bottom: 100px;
+        
+
+    }
+ }
 
 
 
