updated version for print
updated version for print

--- a/printable_cv/css/style.css
+++ b/printable_cv/css/style.css
@@ -333,9 +333,8 @@ p#endnote { text-align: center; }
     }
 
     .page-break {
-        page-break-before: always;
-        margin-bottom: 100px;
-        
+/*        page-break-before: always;*/
+        margin-bottom: 120px;      
 
     }
  }
