--- a/printable_cv/css/style.css
+++ b/printable_cv/css/style.css
@@ -294,7 +294,7 @@ p#endnote { text-align: center; }
     background: #343434;
     
     max-width: 1050px;
-    left: 11.1%;
+    left: 0;
 /*    transform: translateX(-50%);*/
 
 }
